--- a/gb/18/4/7/n10283443.md
+++ b/gb/18/4/7/n10283443.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xrbzou3952/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xrbzou3952/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xrbzou3952/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xrbzou3952/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xrbzou3952/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xrbzou3952/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xrbzou3952/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xrbzou3952/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xrbzou3952/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xrbzou3952/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xrbzou3952/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xrbzou3952/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xrbzou3952/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xrbzou3952/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xrbzou3952/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>朴槿惠早年坎坷 陷入闺密干政恐在狱中度余生</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/04/000_RB916-600x400.jpg" />
 <h6>韩国前总统朴槿惠因贪污丑闻昨天（6日）遭法院一审判处24年徒刑和180亿韩元罚金。（AFP PHOTO / JUNG Yeon-Je）
 </h6>
 <hr>
-	<p>【大纪元2018年04月07日讯】韩国前总统<ahref="https://github.com/xrbzou3952/djy/blob/master/gb/tag/%E6%9C%B4%E6%A7%BF%E6%83%A0.md#1">朴槿惠</a>因贪污丑闻昨天（6日）遭法院一审判处24年徒刑和180亿韩元罚金。出身政治世家的朴槿惠早年坎坷悲情，后来在政坛发光，最后却栽在<ahref="https://github.com/xrbzou3952/djy/blob/master/gb/tag/%E9%97%BA%E5%AF%86.md#1">闺密</a>干政，余生恐怕要在狱中度过。</p>
-<p>据中央社报导，<ahref="https://github.com/xrbzou3952/djy/blob/master/gb/tag/%E6%9C%B4%E6%A7%BF%E6%83%A0.md#1">朴槿惠</a>生于1952年，是韩国前总统朴正熙的长女。朴正熙1961年发动军事政变掌权，施行威权统治，但他也是早期韩国经济起飞的推手，因此在南韩评价两极。</p>
+	<p>【大纪元2018年04月07日讯】韩国前总统<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9C%B4%E6%A7%BF%E6%83%A0.md#1">朴槿惠</a>因贪污丑闻昨天（6日）遭法院一审判处24年徒刑和180亿韩元罚金。出身政治世家的朴槿惠早年坎坷悲情，后来在政坛发光，最后却栽在<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%97%BA%E5%AF%86.md#1">闺密</a>干政，余生恐怕要在狱中度过。</p>
+<p>据中央社报导，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9C%B4%E6%A7%BF%E6%83%A0.md#1">朴槿惠</a>生于1952年，是韩国前总统朴正熙的长女。朴正熙1961年发动军事政变掌权，施行威权统治，但他也是早期韩国经济起飞的推手，因此在南韩评价两极。</p>
 <p>父亲的政治路也成了朴槿惠的人生宿命，更是人生枷锁。</p>
 <p>1974年8月15日，在首尔举行的光复节纪念大会上，母亲陆英修被旅居日本、亲平壤的韩侨文世光举枪刺杀，当时人在法国留学的朴槿惠立刻赶回韩国，年仅22岁就肩负起代理母亲“第一夫人”的角色。</p>
 <p>身为家中长女，朴槿惠也必须女代母职，照顾一位弟弟与一位妹妹，重担压在正值青春梦幻年龄的朴槿惠身上。命运造化弄人，5年后，朴正熙于1979年10月26日被亲信、中央情报部（KCIA）部长金载圭刺杀身亡。</p>
@@ -25,52 +25,51 @@
 <p>66岁的朴槿惠从未结婚的事实，也是她当初虏获民众支持的因素之一，因为过去常有领袖卷入亲人贪污丑闻。她竞选总统时宣称自己不亏欠任何人，“嫁给国家”。</p>
 <p>朴槿惠竞选总统发表演说时提到：“我没有家庭需要照护，也没有小孩可以继承财产……我想把我自己奉献给国家与人民。”</p>
 <p>担任总统时，朴槿惠持续强化她是韩国“无私女儿”的形象，私下平常都是独自吃晚餐，在难得的闲暇时刻有狗陪伴。</p>
-<p>因此，当朴槿惠爆出<ahref="https://github.com/xrbzou3952/djy/blob/master/gb/tag/%E9%97%BA%E5%AF%86.md#1">闺密</a><ahref="https://github.com/xrbzou3952/djy/blob/master/gb/tag/%E5%B4%94%E9%A1%BA%E5%AE%9E.md#1">崔顺实</a>干政丑闻时，就连她最忠实的支持者也认为难以接受。</p>
-<p>这也让外界注意到朴槿惠与<ahref="https://github.com/xrbzou3952/djy/blob/master/gb/tag/%E5%B4%94%E9%A1%BA%E5%AE%9E.md#1">崔顺实</a>已故父亲崔太敏长达数十年又受人质疑的关系。崔太敏是宗教人物，1970年代遭控利用与朴槿惠的关系，从韩国企业牟取大量金钱。</p>
+<p>因此，当朴槿惠爆出<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%97%BA%E5%AF%86.md#1">闺密</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B4%94%E9%A1%BA%E5%AE%9E.md#1">崔顺实</a>干政丑闻时，就连她最忠实的支持者也认为难以接受。</p>
+<p>这也让外界注意到朴槿惠与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B4%94%E9%A1%BA%E5%AE%9E.md#1">崔顺实</a>已故父亲崔太敏长达数十年又受人质疑的关系。崔太敏是宗教人物，1970年代遭控利用与朴槿惠的关系，从韩国企业牟取大量金钱。</p>
 <p>国家调查声称，崔顺实跟随她父亲的脚步，与朴槿惠共谋施压企业“捐赠”数千万美元给非营利基金会，之后用在崔顺实个人目的。</p>
-<p>因为<ahref="https://github.com/xrbzou3952/djy/blob/master/gb/tag/%E9%97%BA%E5%AF%86%E5%B9%B2%E6%94%BF.md#1">闺密干政</a>风暴，朴槿惠成为首位遭受刑事调查的韩国在位总统，最后被国会弹劾下台。她去年因涉嫌收贿等13项罪名遭到羁押，检方今年2月指控她犯有18宗罪，请求法庭判处30年徒刑并处罚金1,185亿韩元。昨天朴槿惠被法院判处24年有期徒刑和罚金180亿韩元，余生恐怕要在狱中度过。</p>
+<p>因为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%97%BA%E5%AF%86%E5%B9%B2%E6%94%BF.md#1">闺密干政</a>风暴，朴槿惠成为首位遭受刑事调查的韩国在位总统，最后被国会弹劾下台。她去年因涉嫌收贿等13项罪名遭到羁押，检方今年2月指控她犯有18宗罪，请求法庭判处30年徒刑并处罚金1,185亿韩元。昨天朴槿惠被法院判处24年有期徒刑和罚金180亿韩元，余生恐怕要在狱中度过。</p>
 <p>责任编辑：林琮文</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/16/12/26/n8632441.md#1">30分钟对话录音曝光 朴槿惠17年前已被掌控</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/17/3/15/n8924199.md#1">何清涟：朴槿惠的悲剧 成败皆因“造王者”</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/18/1/4/n10024919.md#1">朴槿惠再添1罪 收贿1亿国安密帐</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/18/2/13/n10140445.md#1">朴槿惠亲信干政 崔顺实一审被判20年</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/12/26/n8632441.md#1">30分钟对话录音曝光 朴槿惠17年前已被掌控</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/3/15/n8924199.md#1">何清涟：朴槿惠的悲剧 成败皆因“造王者”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/1/4/n10024919.md#1">朴槿惠再添1罪 收贿1亿国安密帐</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/13/n10140445.md#1">朴槿惠亲信干政 崔顺实一审被判20年</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/14/n10637364.md#1" target="_blank">中共“文艺沙皇”被囚9年 晚年反思悲剧终局</a></li><li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/18/n3966634.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑3</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/1/n10885699.md#1" target="_blank">陆文：生与死的抉择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/20/12/30/n12653736.md#1">【命理】应享福或应受苦 命中有定数</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/5/n12667124.md#1">大疫将行 三指中共</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/11/n12680516.md#1">犹太拉比：科技巨头审查言论是反神的战争</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/10/n12678623.md#1">英媒：英军特种部队受训 抵抗外星人入侵</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/12/n12683520.md#1">【财商天下】中国经济遇寒 谁给财政戴镣铐？</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/13/n12685466.md#1">【珍言真语】港人急寻救生艇 刘慧卿：中共迫使</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/13/n12685833.md#1">【时事纵横】川普解密病毒情报？中共毁灭证据</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/11/n12679740.md#1">【更新1.11】共和党叫停民主党首次罢免川普表决</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/12/n12681963.md#1">【有冇搞错】马云外逃？中国是大重构下个目标</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/12/n12682033.md#1">川普宣布华府进入紧急状态 并提供联邦援助</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/12/n12681992.md#1">晒与张钧甯等艺人合照 范冰冰：还是闺密靠谱</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/13/n12684292.md#1">杨颖受攻击 黄晓明护妻：冲我来 评论永不关闭</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/13/n12686353.md#1">高圆圆常年穿件雨衣下厨 背后原因令人感佩</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/12/n12683780.md#1">章子怡首拍电视剧惹负评 汪峰晒照发文护妻</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/11/n12681730.md#1">粉丝好奇如何拍逼真断腿戏 刘德华幽默回应</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/11/n12681545.md#1">彩色口罩含致癌物？医师：3种颜色较安全</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/12/n12682337.md#1">诺查丹玛斯预言成真？ 小行星13日接近地球</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/13/n12685094.md#1">以色列公司从空气中提取饮用水 日产5000升</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/13/n12684593.md#1">美国CIA解密大量UFO文件 网上可下载</a></li>
-<li><a href="https://github.com/xrbzou3952/djy/blob/master/gb/21/1/12/n12682606.md#1">奇特画面：男子在游泳池内 头部与身体分离</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xrbzou3952/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xrbzou3952/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/7/n10283443.htm">朴槿惠早年坎坷 陷入闺密干政恐在狱中度余生</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/7/n10283443.htm">朴槿惠早年坎坷 陷入闺密干政恐在狱中度余生</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xrbzou3952/djy/blob/master/gb/18/4/7/n10283443.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xrbzou3952/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xrbzou3952/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xrbzou3952/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xrbzou3952/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xrbzou3952/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/4/7/n10283443.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
