--- a/gb/19/3/4/n11087327.md
+++ b/gb/19/3/4/n11087327.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ztxdxh342/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ztxdxh342/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ztxdxh342/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ztxdxh342/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ztxdxh342/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ztxdxh342/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ztxdxh342/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>伍新：解“救”</h2>
 
 <h6></h6>
 <hr>
-	<p>【大纪元2019年03月04日讯】【<ahref="https://github.com/ztxdxh342/djy/blob/master/gb/tag/%E8%A7%A3%E4%BD%93%E5%85%9A%E6%96%87%E5%8C%96.md#1">解体党文化</a>】之六：习惯了的党话（上）：中共盗用国家政权对民族文化和语言的深刻伤害，可以说前无古人。语言是思维的工具。被党文化严重污染的语言，严重地损害了人们反思中共、反思党文化、构思民族未来的能力。很多人都发现一个奇特的现象：人们用中共制造的语言批判中共，愤怒声讨中共的文章仍然称中共建政为“解放”，有人在“退党声明”中仍然说“我是‘生在新中国，长在红旗下’的。”让人简直难以分辨他到底是要<ahref="https://github.com/ztxdxh342/djy/blob/master/gb/tag/%E5%94%BE%E5%BC%83%E4%B8%AD%E5%85%B1.md#1">唾弃中共</a>，还是要感激中共。在中共政权摇摇欲坠、人民亟待回归正常人类文化的今天，认清附着在民族语言上的党话，清除党话，已经成为刻不容缓的任务。——题记</p>
-<p>南美首富园，速成穷光蛋。<ahref="https://github.com/ztxdxh342/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%B8%BB%E4%B9%89.md#1">社会主义</a>旗，插哪哪沦陷。</p>
+	<p>【大纪元2019年03月04日讯】【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%A7%A3%E4%BD%93%E5%85%9A%E6%96%87%E5%8C%96.md#1">解体党文化</a>】之六：习惯了的党话（上）：中共盗用国家政权对民族文化和语言的深刻伤害，可以说前无古人。语言是思维的工具。被党文化严重污染的语言，严重地损害了人们反思中共、反思党文化、构思民族未来的能力。很多人都发现一个奇特的现象：人们用中共制造的语言批判中共，愤怒声讨中共的文章仍然称中共建政为“解放”，有人在“退党声明”中仍然说“我是‘生在新中国，长在红旗下’的。”让人简直难以分辨他到底是要<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%94%BE%E5%BC%83%E4%B8%AD%E5%85%B1.md#1">唾弃中共</a>，还是要感激中共。在中共政权摇摇欲坠、人民亟待回归正常人类文化的今天，认清附着在民族语言上的党话，清除党话，已经成为刻不容缓的任务。——题记</p>
+<p>南美首富园，速成穷光蛋。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%B8%BB%E4%B9%89.md#1">社会主义</a>旗，插哪哪沦陷。</p>
 <p>委内瑞拉变，全球多点赞。五洲声讨红，美国首挥剑。</p>
 <p>剿共新联盟，四海汇巨澜。末日在逼近，中南海抖颤。</p>
 <p>又怕黑天鹅，又惧灰犀牛⑴。越怕越装样，瘪肚慌吹牛。</p>
@@ -78,7 +78,7 @@
 <p>要在全世界，彻底把人毁⒆。说可救地球，做在毁地球。</p>
 <p>终究不可以，恢恢天网收。全球除共害，共党定亡败⒇。</p>
 <p>注：<br />
-1. 新唐人北京时间2019年02月21日讯，美国总统川普周一（2月18日）下午在佛罗里达州迈阿密向美国最大的委内瑞拉裔社区讲话，同时也是向正在发生政治变革的委内瑞拉喊话。川普告诉委内瑞拉人民，委内瑞拉裔人民在自由美国的现在就是他们的未来，<ahref="https://github.com/ztxdxh342/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%B8%BB%E4%B9%89.md#1">社会主义</a>在委内瑞拉和世界各地的终结指日可待。川普指出：“不久以前，委内瑞拉是南美洲迄今为止最富有的国家。但是多年的社会主义统治让这个曾经繁荣的国家濒临毁灭。这就是今天的情况。”</p>
+1. 新唐人北京时间2019年02月21日讯，美国总统川普周一（2月18日）下午在佛罗里达州迈阿密向美国最大的委内瑞拉裔社区讲话，同时也是向正在发生政治变革的委内瑞拉喊话。川普告诉委内瑞拉人民，委内瑞拉裔人民在自由美国的现在就是他们的未来，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E4%B8%BB%E4%B9%89.md#1">社会主义</a>在委内瑞拉和世界各地的终结指日可待。川普指出：“不久以前，委内瑞拉是南美洲迄今为止最富有的国家。但是多年的社会主义统治让这个曾经繁荣的国家濒临毁灭。这就是今天的情况。”</p>
 <p>此前有报导说，2018年9月19日，川普在联合国大会做第一次演讲时，直接抨击委内瑞拉奉行社会主义给人民带来贫穷与苦难：“委内瑞拉的问题不在于对社会主义执行不力，而是忠实地奉行社会主义。”并进一步表示：“从苏联到古巴及委内瑞拉，无论他们采行的是社会主义或者共产主义，结果都是痛苦、崩坏和败亡。”“那些宣扬这些可耻意识形态教条的领导人，只会持续地为其基层人民带来痛苦，让他们生活在残酷制度之下，美国支持所有被野蛮政权统治的人们。”他呼吁各国都要抵制社会主义。</p>
 <p>据中共官媒报导，2019年1月21日，习近平在中共“省部级主要领导专题研讨班”开班式上讲话，强调“警惕黑天鹅，防范灰犀牛”以及保“政治安全”。</p>
 <p>2. 据新唐人2019年02月23日讯，大陆电影《流浪地球》过年期间上映后，被外界讽刺为“太空版战狼”、“超级灾难片”等。也有评论称，中共试图藉《流浪地球》宣扬“人类命运共同体”概念。</p>
@@ -90,7 +90,7 @@
 <p>据新唐人2019年03月01日讯，为了给下一代洗脑、加强所谓的爱党教育，江西省将从本学期开始开设红色文化课程，配套教材从幼儿园到大学，覆盖所有学校。中共教育部要求，这套教材要“从江西出发，走向全国、走向世界”。</p>
 <p>3. 我们信仰的主义，乃是宇宙的真理。（方志敏《诗一首》）</p>
 <p>4. 有一个邪恶的共产革命口号，叫作“砸烂万恶的旧世界！”</p>
-<p>5. “共产主义并非一种思潮、学说，或者在人类寻找出路时一个失败了的尝试。它是魔鬼，亦称共产邪灵，由恨和宇宙低层空间各种败坏物质构成。它原本是一条蛇，到了表层空间的体现形式则是一条红龙。它与仇视<ahref="https://github.com/ztxdxh342/djy/blob/master/gb/tag/%E6%AD%A3%E7%A5%9E.md#1">正神</a>的撒旦为伍，同时利用各种低灵和魔祸乱人间。这个邪灵的终极目的就是要毁灭人类，在神归来挽救众生的最后关头，让人不信神，让人的道德败坏到背弃神和传统，听不懂神的教诲而导致最终被淘汰。”（《魔鬼在统治着我们的世界——共产党的幽灵并没有随着东欧共产党的解体而消失（1）》前言，大纪元2018年05月18日）</p>
+<p>5. “共产主义并非一种思潮、学说，或者在人类寻找出路时一个失败了的尝试。它是魔鬼，亦称共产邪灵，由恨和宇宙低层空间各种败坏物质构成。它原本是一条蛇，到了表层空间的体现形式则是一条红龙。它与仇视<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AD%A3%E7%A5%9E.md#1">正神</a>的撒旦为伍，同时利用各种低灵和魔祸乱人间。这个邪灵的终极目的就是要毁灭人类，在神归来挽救众生的最后关头，让人不信神，让人的道德败坏到背弃神和传统，听不懂神的教诲而导致最终被淘汰。”（《魔鬼在统治着我们的世界——共产党的幽灵并没有随着东欧共产党的解体而消失（1）》前言，大纪元2018年05月18日）</p>
 <p>6. “只是从人中洗劫神造的一切，共产邪灵并不满足。为了实现其终极目的，它同时在人间建立了一个巨大的党文化魔教场，让人‘自然’地生活在其中而浑然不觉。党从暴力杀戮开始胁迫人们生活于其中，到大“骗”让人习惯生活于其中，直到人以为世界就是这样构成，自觉地服从这个物质场的规矩和限制，想共产党之想、言共产党之言。党说‘没有共产党就没有中国的前途’，人们就想，‘离开了共产党，谁能领导我们的国家’；党说‘反党就是反华’，人们就混淆了谁是党谁是中华。”</p>
 <p>（《共产主义的终极目的——中国篇》第五章 邪灵篡位 文化沦丧）</p>
 <p>7. “中共在实现其全球野心的过程中，完全没有道德底线，不讲任何规则。正如《九评共产党》中所说，中共的起家历史，是一个逐步完成其集中外邪恶之大全的过程，其中包括九大基因：‘邪、骗、煽、斗、抢、痞、间、灭、控’。这些基因在中共全球扩张过程中承传不断、随处可见，手段和恶性程度不断强化和发展。而中共的超限战思想就是这些邪恶特征的集中体现，也是中共步步得逞的重要原因。”</p>
@@ -108,7 +108,7 @@
 <p>“邪灵安排这场‘经济奇迹’的目的很简单：没有经济上的强大，中共就没有对世界的发言权。但是，邪灵并不是为了让中国强大而安排这一切的，邪灵是要让世界在经济上和国际事务上有求于中共，在中共继续把中国人的道德推向深渊时、迫害中国人的信仰时，整个世界能够保持沉默，视而不见。同时，还要让道德堕落了的中国去把世界的道德也拉下来，走向‘共毁’。”</p>
 <p>“不过，邪灵在利用‘全球化’玩财富大挪移，让中国一夜暴富的花招时，也定下了让这种财富消失的机制。西方民众早晚会起来反对财富的大挪移。一旦其政客面临来自选民的压力，这些国家也会改弦更张，甚至联合起来对抗中共，中国虚胖的经济根本就不是对手。同时，没有道德的经济是不会持续发展的。在安排了不计道德成本的经济暴发的同时，就埋下了未来道德成本过高而导致经济崩盘的伏笔。”（《共产主义的终极目的——中国篇》第二章 红魔阴谋 毁灭人类）</p>
 <p>13. “从1949年以后，中国有一半以上的人口受到过中共的迫害，估计有六千万到八千万人非正常死亡，超过人类两次世界大战死亡人数的总和。”（《九评共产党》之七）<br />
-“中共在历史上用各种手段杀害了八千万中国人，现在对法轮功学员、基督教家庭教会、藏人、维吾尔人、异议人士、底层人民犯下了罄竹难书的罪行。一旦中共政权垮台，将面临被清算的下场。为此，中共宁可在极权、迫害这条路上走到黑，也不会选择告别历史舞台。在自保的过程中，中共就像一个急于逃脱的重刑犯，不惜一次次犯下更加骇人听闻的罪行。中共是共产邪灵在人间选定的主要代理人。共产邪灵是宇宙中变异的魔鬼，从产生之日起，就受到宇宙中<ahref="https://github.com/ztxdxh342/djy/blob/master/gb/tag/%E6%AD%A3%E7%A5%9E.md#1">正神</a>的清剿。因此，中共存在的始终都伴随着强烈的危机感和恐惧感。这种危机感和恐惧感驱使中共在危机到来时，很可能会‘狗急跳墙’，采取极端的手段以自保。”（《魔鬼在统治着我们的世界——共产党的幽灵并没有随着东欧共产党的解体而消失(27)》第十八章 魔鬼安排下中共的全球野心（下），大纪元2018年12月23日）</p>
+“中共在历史上用各种手段杀害了八千万中国人，现在对法轮功学员、基督教家庭教会、藏人、维吾尔人、异议人士、底层人民犯下了罄竹难书的罪行。一旦中共政权垮台，将面临被清算的下场。为此，中共宁可在极权、迫害这条路上走到黑，也不会选择告别历史舞台。在自保的过程中，中共就像一个急于逃脱的重刑犯，不惜一次次犯下更加骇人听闻的罪行。中共是共产邪灵在人间选定的主要代理人。共产邪灵是宇宙中变异的魔鬼，从产生之日起，就受到宇宙中<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%AD%A3%E7%A5%9E.md#1">正神</a>的清剿。因此，中共存在的始终都伴随着强烈的危机感和恐惧感。这种危机感和恐惧感驱使中共在危机到来时，很可能会‘狗急跳墙’，采取极端的手段以自保。”（《魔鬼在统治着我们的世界——共产党的幽灵并没有随着东欧共产党的解体而消失(27)》第十八章 魔鬼安排下中共的全球野心（下），大纪元2018年12月23日）</p>
 <p>14. “法轮功讲‘真善忍’，共产党讲‘假恶斗’”。“从意识形态上来说，共产党的赖以生存的“哲学”与法轮功的教导是截然对立的。”</p>
 <p>“法轮功在道德上的高标准使中共很难堪”。“1989年“六四”天安门屠杀之后，中共的意识形态彻底破产，尤其是1991年8月苏共垮台和随之而来的东欧剧变，给中共带来极大的恐惧和压力，内外交困的形势使其统治合法性和生存受到了空前的挑战。此时中共已经无法用马、列、毛的原教旨主义整合其党徒，而转向了用全面腐败来换取党徒的忠心。换句话说，只要谁跟着党，党就允许他通过贪污等方式换取不入党就得不到的好处。尤其是1992年邓小平南巡之后，中国从官倒横行到房地产和股市的投机，从包二奶到走私遍地，黄赌毒蔓延。虽不能说‘洪洞县内无好人’，但民间对于中共反腐早已失去信心，认为中高级干部的腐败比例超过一半以上。”“此时法轮功学员修炼‘真善忍’，展示出来的道德风貌打动了民众尚存的内心善良，引来上亿民众的敬意，参与修炼，法轮功这面道德的镜子照出了中共的一切不正。”（《九评共产党》之五）</p>
 <p>15. “江泽民在1999年镇压法轮功之初，曾打算“三个月”解决法轮功。但是中共低估了法轮功的力量，低估了传统和信仰的力量。”“自古邪不压正，邪恶是不能从人们的心中‘铲除’善良的。五年多过去了，法轮功仍然是法轮功，而且在世界上得到了更广泛的传播。江泽民和中共却在这场正邪较量中大败，也把其自身的流氓、残酷和邪恶本性暴露无遗。江泽民现在声名狼藉，内外交困，正在面临众多的法律起诉和要求清理、法办与绳之以法的呼声。”（同上）</p>
@@ -142,35 +142,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ztxdxh342/djy/blob/master/gb/6/9/10/n1449356.md#1">【解体党文化】绪论</a></li>
-<li><a href="https://github.com/ztxdxh342/djy/blob/master/gb/7/5/9/n1704164.md#1">多伦多“解体党文化”研讨会预告</a></li>
-<li><a href="https://github.com/ztxdxh342/djy/blob/master/gb/7/6/26/n1754745.md#1">悉尼举办《解体党文化》研讨会</a></li>
-<li><a href="https://github.com/ztxdxh342/djy/blob/master/gb/7/8/5/n1792873.md#1">伍新：破除党理论是解体党文化的一个基础环节</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/6/9/10/n1449356.md#1">【解体党文化】绪论</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/5/9/n1704164.md#1">多伦多“解体党文化”研讨会预告</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/6/26/n1754745.md#1">悉尼举办《解体党文化》研讨会</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/8/5/n1792873.md#1">伍新：破除党理论是解体党文化的一个基础环节</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/30/n11290434.md#1" target="_blank">【征文】爱德华：金门战役共军惨败之迷</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
-<li><a href="https://github.com/trljms3990/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ztxdxh342/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ztxdxh342/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/4/n11087327.htm">伍新：解“救”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/3/4/n11087327.htm">伍新：解“救”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ztxdxh342/djy/blob/master/gb/19/3/4/n11087327.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ztxdxh342/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ztxdxh342/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ztxdxh342/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ztxdxh342/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ztxdxh342/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/3/4/n11087327.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
